--- a/aulas/ex022/fundo004.html
+++ b/aulas/ex022/fundo004.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalização do fundo</title>
+    <title>posicionamento</title>
     <style>
         body{
-            background-image: url(imagens/wallpaper001.jpg);
-            background-size: 100px 100px;
+            height: 98vh;
+            border: 1px dashed black;
+            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
             background-repeat: no-repeat;
+            background-size: 100px;
+            background-position: left top;
         }
     </style>
 </head>
 <body>
-
+    
 </body>
 </html>
