--- a/aulas/ex022/fundo006.html
+++ b/aulas/ex022/fundo006.html
@@ -8,19 +8,24 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
+            
+            /* Short - background
+                color -> image -> position -> repeat -> [size] - attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
         main{
             background-color:white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 2px solid black;
             border-radius: 19px;
+        }
+        p{
+            text-align: justify;
         }
     </style>
 </head>
@@ -28,6 +33,22 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae hic ratione quibusdam, non quia doloremque officia est unde et veritatis quos nemo quas aut assumenda veniam in, nobis dignissimos nam.
