--- a/aulas/ex024/iframes01.html
+++ b/aulas/ex024/iframes01.html
@@ -10,6 +10,10 @@
             width: 500px;
             background-color: black;
         }
+
+        iframe{
+            height: 400px;
+        }
     </style>
 </head>
 <body>
